# starting-point

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: entrypoint
config/celery/beat/: start
config/celery/flower/: start
config/celery/worker/: start
edgar_scrapper/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
