[tool.poetry]
name = "edgar-scrapper"
version = "0.1.0"
description = "Continuum Edgar Scrapper"
authors = ["Brett Hardin <brett.hardin@joincontinuum.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"
sec-edgar = "^0.0.2"
psycopg2 = "^2.9.3"
celery = "^5.2.7"
redis = "^4.3.4"
Django = "^4.1"
django-extensions = "^3.2.0"
flower = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
